--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -23,7 +23,7 @@
   </ul>
 
   <h2>4. Contact</h2>
-  <p>Email: support@tdsoftware.dev</p>
+  <p>Email: admin@tdsoftware.dev</p>
 </div>
 </body>
 </html>
