--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
   </ol>
 
   <h2 style="color:#1A73E8;">📞 Support</h2>
-  <p>Email: support@tdsoftware.dev</p>
+  <p>Email: admin@tdsoftware.dev</p>
 </div>
 </body>
 </html>
