--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -20,7 +20,7 @@
   <p>T&D Software is not responsible for data loss or damages.</p>
 
   <h2>4. Contact</h2>
-  <p>Email: support@tdsoftware.dev</p>
+  <p>Email: admin@tdsoftware.dev</p>
 </div>
 </body>
 </html>
